optimized SEO and fix some issues

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,9 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
-    <!-- <meta
-      name="google-site-verification"
-      content="dq-usWqMrCpJSM0LjIMwX7pkCxO1xzxxZEITRO92LaY"
-    /> -->
-
     <meta
       name="keywords"
-      content="alight motion preset, am preset, alight motion xml, alight motion premium, alight motion free download, alight motion mod apk, alight motion drive, 5MB"
+      content="alight motion preset, am preset, alight motion xml, alight motion premium, free alight motion download, alight motion mod apk, alight motion drive link, 5MB presets, AM preset link, preset am ff, amv presets, cc shake preset, video editing presets, android video presets, alight motion effects"
     />
 
     <meta
