fix some h1 and add OG meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,13 @@
       content="Our app offers a collection of free presets that you can use for your video projects without the need to start from scratch."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Download Alight Motion Preset" />
+    <meta
+      property="og:description"
+      content="Get preset pack in Alight Motion Preset apk"
+    />
+    <meta property="og:site_name" content="Alight Motion Preset" />
+
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
