--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       content="Our app offers a collection of free presets that you can use for your video projects without the need to start from scratch."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Download Alight Motion Preset" />
     <meta
       property="og:description"
